--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,9 +2,9 @@
 name: Laravel TDD
 on:
   push:
-    branches: ["master"]
+    branches: ["main"]
   pull_request:
-    branches: ["master"]
+    branches: ["main"]
 
 jobs:
   laravel:
