--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -2,7 +2,7 @@
 name: Laravel TDD
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "github-actions"]
   pull_request:
     branches: ["main"]
 
