--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,61 +1,20 @@
-# GitHub Action for Laravel with MySQL
-name: Laravel TDD
-on:
-  push:
-    branches: ["main", "github-actions"]
-  pull_request:
-    branches: ["main"]
-
+on: push
+name: CI
 jobs:
-  laravel:
-    name: Laravel (PHP ${{ matrix.php-versions }})
+  phpunit:
     runs-on: ubuntu-latest
-    env:
-      DB_CONNECTION: sqlite
-      DB_DATABASE: ":memory:"
-
-    strategy:
-      fail-fast: false
-      matrix:
-        php-versions: ["8.0", "8.1"]
+    container:
+      image: kirschbaumdevelopment/laravel-test-runner:7.3
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      # Docs: https://github.com/shivammathur/setup-php
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - uses: actions/checkout@v1
         with:
-          php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo, mysql
-          coverage: xdebug
-
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Cache composer dependencies
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          # Use composer.json for key, if composer.lock is not committed.
-          # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Install Composer dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
-
-      - name: Prepare the application
+          fetch-depth: 1
+      - name: Install composer dependencies
         run: |
-          php -r "file_exists('.env') || copy('.env.example', '.env');"
+          composer install --no-scripts
+      - name: Prepare Laravel Application
+        run: |
+          cp .env.ci .env
           php artisan key:generate
-
-      - name: Clear Config
-        run: php artisan config:clear
-
-      - name: Run Migration
-        run: php artisan migrate
-
-      - name: Test with php artisan
-        run: php artisan test
+      - name: Run Testsuite
+        run: vendor/bin/phpunit tests/
