--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           composer require "laravel/framework=^${{ matrix.laravel }}" --no-update
           composer update --prefer-dist --no-interaction --no-progress
+          cp .env.example .env
           php artisan key:generate
       - name: Execute tests
         run: vendor/bin/phpunit --verbose
